cluster/apps/networking-system/ingresses/base/lldap/ingress-traefikCRD.yaml
---
# yaml-language-server: $schema=https://schemas.budimanjojo.com/traefik.containo.us/ingressroute_v1alpha1.json
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: lldap
  labels:
    app.kubernetes.io/name: lldap
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`ldap.${SECRET_DOMAIN_0}`)
      services:
        - name: lldap
          port: 17170
          namespace: authentication-system
  tls:
    secretName: ${SECRET_DOMAIN_0//./-}-prod-tls
